# supercell

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  cliff.toml  config.example.yml  create-release.sh  dev-server.sh
docs/: playbook-release.md  publish-feed.md
etc/: docker-compose.yml  publish.py  release.sh  supercell.service
migrations/: 20241103180245_init.down.sql  20241103180245_init.up.sql
src/: config.rs  consumer.rs  crypto.rs  errors.rs  lib.rs  matcher.rs  storage.rs  vmc.rs
src/http/: context.rs  handle_describe_feed_generator.rs  handle_get_feed_skeleton.rs  handle_index.rs  handle_well_known.rs  mod.rs  server.rs
