[package]
name = "supercell"
version = "0.1.2"
edition = "2021"

[profile.release]
lto = true
strip = true

[dependencies]
anyhow = "1.0.88"
async-trait = "0.1.82"
axum-extra = { version = "0.9.4", features = ["query"] }
axum = { version = "0.7.5", features = ["http2", "macros"] }
base64 = "0.22.1"
chrono-tz = "0.10.0"
chrono = { version = "0.4.38", default-features = false, features = ["std", "alloc", "now"] }
ecdsa = { version = "0.16.9", features = ["std", "signing", "verifying"] }
futures-util = { version = "0.3.31", features = ["sink"] }
headers = "0.4.0"
http = "1.1.0"
k256 = { version = "0.13.4", features = ["ecdsa"] }
multibase = "0.9.1"
p256 = { version = "0.13.2", features = ["ecdsa"] }
serde_json_path = "0.7.1"
serde_json = { version = "1.0.132", features = ["alloc"] }
serde = { version = "1.0.214", features = ["alloc", "derive"] }
serde_yaml = "0.9.34"
sqlx-cli = { version = "0.8.2", features = ["sqlite"] }
sqlx = { version = "0.8.2", features = ["chrono", "sqlite"] }
thiserror = "1.0.63"
tokio-util = { version = "0.7.12", features = ["net", "rt", "tracing"] }
tokio = { version = "1.41.0", features = ["bytes", "macros", "net", "rt", "rt-multi-thread", "signal", "sync"] }
tokio-websockets = { version = "0.10.1", features = ["client", "native-tls", "rand", "ring"] }
tower-http = { version = "0.5.2", features = ["cors", "fs", "timeout", "trace", "tracing"] }
tower = { version = "0.5.1", features = ["limit", "timeout", "tokio", "tracing"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "chrono", "json"] }
tracing = { version = "0.1.40", features = ["async-await", "log", "valuable"] }
zstd = "0.13.2"
reqwest = { version = "0.12.9", features = ["json", "zstd", "rustls-tls"] }
boa_engine = "0.19.1"
